# geospatial-tools

./: .env.example  .gitignore  .markdown-link-check.json  .mdformat.toml  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGES.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  Makefile  Makefile.private  Makefile.private.example  Makefile.targets  Makefile.variables  README.md  environment.yml  index.html  mkdocs.yml  noxfile.py  objects.inv  properdocs.yml  pyproject.toml  tox.ini
.gemini/: GEMINI.md
.github/: copilot-instructions.md
.github/workflows/: lint.yml  pre-commit.yml  publish-gh-pages.yml  test.yml
.make/: .bumpversion.toml  CHANGES_MAKEFILE.md  Makefile  README.md  base.make  conda.make  docs.make  lint.make  manager.make  poetry.make  test.make  uv.make
.make/scripts/: auto_init_script.py
.make/tests/: test-script.sh  test_environment.yml
configs/: data_file_links.yaml  geospatial_tools_ini.yaml.example
data/: README.md  s2_grid_usa_polygon_5070.gpkg  usa_polygon_5070.gpkg
docs/: conda_environment_creation.md  environment_creation_drac.md  environment_creation_mila.md  makefile_environment_targets.md  migrating_to_drac.md  nox_session_descriptions.md  poetry_documentation.md  uv_documentation.md
docs/agents/: README.md  agent_instructions.md
docs/agents/instructions/: KNOWLEDGE.md  analytics.md  code_review.md  formal_planning.md  infrastructure.md  ml.md  orchestrator.md  plan_to_tasks.md  planning.md  python.md  root_cause_analysis.md  security.md  software_dev.md  specdrivendev.md  systemdesign.md
docs/agents/planning/: COPERNICUS_STAC_INTEGRATION_PLAN_GEMINI_1.md  README.md  refactor_copernicus_s3_access_PLAN.md  relevant_copernicus_links.md  stac_current_structure.md
docs/agents/planning/_completed/add-pc-s1/: add-pc-s1-spec.md  add-pc-s1.md
docs/agents/planning/_completed/add-sentinel3/: add-sentinel3-plan.md  add-sentinel3-spec.md
docs/agents/planning/_completed/copernicus_s3_access/: refactor_copernicus_s3_access_SPEC.md
docs/agents/planning/add-landsat/: add-landsat-plan.md  add-landsat-spec.md
docs/agents/planning/add-pc-s1/: add-pc-s1-spec.md  add-pc-s1.md  review.md
docs/agents/planning/add-project-persistance/: plan-add-persistance-layer.md  spec-add-persistance-layer.md  stac-objects-analysis.md
docs/agents/planning/copernicus_s3_access/: refactor_copernicus_s3_access_PLAN.md  refactor_copernicus_s3_access_SPEC.md
docs/agents/planning/mypy-refactor/: mypy-refactor-plan.md
docs/agents/planning/pc-sentinel2-constants/: pc-sentinel2-constants-spec.md
docs/mkdocs/: index.md
docs/mkdocs/scripts/: gen_ref_pages.py
docs/mkdocs/sections/dev-guide/: developer-guide.md
docs/mkdocs/sections/user-guide/: notebook-examples.md
docs/properdocs/: index.md
docs/properdocs/scripts/: gen_ref_pages.py
docs/properdocs/sections/user-guide/: notebook-examples.md
geospatial_tools/: __init__.py  download.py  geotools_types.py  raster.py  stac.py  types.py  utils.py  vector.py
geospatial_tools/planetary_computer/: sentinel_2.py
geospatial_tools/radar/: nimrod.py
notebooks/: copernicus_sentinel2_exploration.ipynb  planetary_computer_sentinel2_exploration.ipynb  stac_api_tools.ipynb
reference/SUMMARY/: index.html
reference/download/: index.html
reference/geospatial_tools/: index.html
reference/geospatial_tools/auth/: index.html
reference/geospatial_tools/copernicus/: index.html
reference/geospatial_tools/copernicus/sentinel_2/: index.html
reference/geospatial_tools/download/: index.html
reference/geospatial_tools/geotools_types/: index.html
reference/geospatial_tools/planetary_computer/: index.html
reference/geospatial_tools/planetary_computer/sentinel_2/: index.html
reference/geospatial_tools/radar/: index.html
reference/geospatial_tools/radar/nimrod/: index.html
reference/geospatial_tools/raster/: index.html
reference/geospatial_tools/s3_utils/: index.html
reference/geospatial_tools/stac/: index.html
reference/geospatial_tools/stac/copernicus/: index.html
reference/geospatial_tools/stac/core/: index.html
reference/geospatial_tools/stac/planetary_computer/: index.html
reference/geospatial_tools/stac/utils/: index.html
reference/geospatial_tools/utils/: index.html
reference/geospatial_tools/vector/: index.html
reference/geotools_types/: index.html
reference/planetary_computer/: index.html
reference/planetary_computer/sentinel_2/: index.html
reference/radar/: index.html
reference/radar/nimrod/: index.html
reference/raster/: index.html
reference/stac/: index.html
reference/utils/: index.html
reference/vector/: index.html
scripts/: README.md  clip_raster.py  config.sh.example  planetary_computer_sentinel2_product_search.py  resample_tiff_raster.py
scripts/sentinel_2_search_and_process/: README.md  download_and_process.py  process.sh  product_search.py  search.sh
search/: search_index.json
sections/dev-guide/developer-guide/: index.html
sections/user-guide/notebook-examples/: index.html
sections/user-guide/user-guide/: index.html
src/geospatial_tools/: __init__.py  download.py  geotools_types.py  raster.py  s3_utils.py  stac.py  utils.py  vector.py
src/geospatial_tools/copernicus/: __init__.py  sentinel_2.py
src/geospatial_tools/planetary_computer/: sentinel_2.py
src/geospatial_tools/radar/: nimrod.py
src/geospatial_tools/stac/: core.py  utils.py
src/geospatial_tools/stac/copernicus/: __init__.py  auth.py  constants.py
src/geospatial_tools/stac/planetary_computer/: __init__.py  constants.py  sentinel_1.py  sentinel_2.py  sentinel_3.py
tests/: conftest.py  manual_copernicus_test.py  test_copernicus.py  test_copernicus_enums.py  test_download.py  test_nimrod.py  test_planetary_computer_constants.py  test_planetary_computer_sentinel1.py  test_planetary_computer_sentinel2.py  test_planetary_computer_sentinel3.py  test_raster.py  test_s3_utils.py  test_stac.py  test_utils.py  test_vector.py
tests/test_notebooks/: sanitize_file.cfg  test_copernicus_sentinel2.ipynb  test_planetary_computer_sentinel2.ipynb  test_stac_api_tools.ipynb
(+52 files in other folders)
