[project]
name = "geospatial_tools"
version = "0.2.1"
description = ""
authors = [{ name = "f-PLT", email = "fplt.softwaredeveloper@gmail.com" }]
requires-python = ">=3.11,<3.15"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "rasterio>=1.3.10",
    "leafmap>=0.31.9",
    "pystac-client>=0.7.7",
    "planetary-computer>=1.0.0",
    "rioxarray>=0.15.5",
    "pyogrio>=0.8.0",
    "pyarrow>=17.0.0",
    "numpy>=2.1.1",
    "pandas>=2.2.2",
    "typer>=0.12.5",
    "pillow>=11.3.0",
    "scitools-iris>=3.13.1",
    "dask-geopandas>=0.5.0",
    "geopandas>=1.1.1",
    "dask>=2025.10.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.4",
    "pylint>=3.0.3",
    "isort>=5.13.2",
    "bump-my-version>=0.16.2",
    "flynt>=1.0.1",
    "flake8>=7.0.0",
    "pre-commit>=3.7.0",
    "flake8-pyproject>=1.2.3",
    "docformatter[tomli]>=1.7.5",
    "nbval>=0.11.0",
    "black[jupyter]>=25.1.0",
    "nox>=2024.4.15",
    "autoflake>=2.3.1",
    "autopep8>=2.3.2",
    "ruff>=0.11.10",
    "mdformat>=0.7.22",
    "mdformat-gfm>=0.4.1",
    "mdformat-gfm-alerts>=2.0.0",
    "pyment>=0.3.3",
    "mdformat-mkdocs>=5.1.1",
    "mypy>=1.19.1",
    "autotyping>=24.9.0",
]
[project.optional-dependencies]
docs =[
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.20",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.2",
    "mkdocs-section-index>=0.3.10",
    "mkdocstrings-python>=1.18.2",
]
lab = [
    "jupyterlab>=4.0.10",
    "notebook>=7.0.6",
    "jupyterlab-lsp>=5.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

#
# Tools
#

[tool.bumpversion]
current_version = "0.2.1"
commit = true
message = "Version {new_version} released."
tag = true
tag_name = "{new_version}"
parse = '(?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+) (?P<releaseTime>.*)?'
serialize = [
    "{major}.{minor}.{patch}",
]

[[tool.bumpversion.files]]
filename = "CHANGES.md"
search = '''
## [Unreleased](https://github.com/RolnickLab/geospatial-tools/tree/main) (latest)

______________________________________________________________________
'''
replace = '''
## [Unreleased](https://github.com/RolnickLab/geospatial-tools/tree/main) (latest)

______________________________________________________________________

<!-- (New changes here in list form) -->

## [{new_version}](https://github.com/RolnickLab/geospatial-tools/tree/{new_version}) ({utcnow:%Y-%m-%d})

______________________________________________________________________
'''

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "Makefile.variables"
search = "APP_VERSION := {current_version}"
replace = "APP_VERSION := {new_version}"

[tool.pylint]
disable = "C0114,C0115,C0116,R0903,R1710,W1203"
max-line-length = 120
max-locals = 20
max-args = 16
max-attributes = 20
max-positional-arguments = 16

[tool.flake8]
max-line-length = 120
ignore = ["E203", "E266", "E501", "W503"]
docstring-convention = "numpy"
max-complexity = 18
per-file-ignores = []
exclude = [
    ".git",
    "migrations",
    "__pycache__"
]

[tool.autoflake]
remove-all-unused-imports = true
in-place = true
ignore-init-module-imports = true
remove-unused-variables = true
recursive = true

[tool.autopep8]
max_line_length = 120
in-place = true
aggressive = 2
ignore = ["W503", "E203", "E501"]
recursive = true

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.11"
check_untyped_defs = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
ignore_missing_imports = true
follow_imports = "silent"
disable_error_code = ["attr-defined", "union-attr", "import-untyped", "no-any-return"]
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = false
show_error_codes = true
pretty = true
exclude = ["noxfile.py"]

[tool.flynt]
line-length = 120
transform-concats = true
verbose = true

[tool.docformatter]
style = "google"
pre-summary-newline = true
wrap-descriptions = 120
wrap-summaries = 120
blank = false
exclude = []
recursive = true

[tool.ruff]
line-length = 120

target-version = "py311"

exclude = [
  ".git",
  "migrations",
  "__pycache__",
]

[tool.ruff.lint]
select = [
    "A",   # Flake8 Built ins
    "E",   # Error (Flake8)
    "F",   # Pyflakes (Flake8)
    "W",   # Warning (Flake8)
    "I",   # isort (import sorting)
    "N",   # Naming conventions (Pylint, etc.)
    "C90", # mccabe complexity (replaces flake8 --max-complexity and mccabe)
    "B",   # Bugbear (common linting issues)
    "UP",  # pyupgrade (suggests modern Python syntax)
    "PLR", # Pylint refactor
    "PLE", # Pylint error (specific Pylint error rules)
    "PLW", # Pylint warning (specific Pylint warning rules)
    "PLC", # Pylint convention (specific Pylint convention rules)
    "R",   # Refactor (Pylint refactoring suggestions)
    "TID", # TO DO comments
    "FAST",# FastAPI
    "C4",  # List and dict comprehensions
    "DJ",  # Django
    "PIE", # Returns and unnecessary returns
    "Q",   # Double quotes
    "RET", # Fix return statements
    "PTH", # Enforce pathlib
    "ARG", # Unused argument
    "FLY", # Flynt
    "NPY", # Numpy specific
    "PD",  # Pandas specific
    "RUF", # Ruff specific
]

ignore = [
  "E203",  # whitespace before ':', Black already handles this
  "E266",  # too many leading '#' for comments
  "E501",  # line too long (we enforce via line-length instead)
  "RET504",
  "RUF013",
  "PTH123"
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
max-args = 16

[tool.ruff.lint.mccabe]
# cyclomatic complexity
max-complexity = 18
